<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <TextView

            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="@string/masinhvien"
            android:textAllCaps="false"
            />
        <EditText
            android:id="@+id/edmasinhvien"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <TextView

            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="@string/hotensinhvien"
            android:textAllCaps="false"
            />
        <EditText
            android:id="@+id/edhotensinhvien"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <TextView

            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="@string/ngaysinh"
            android:textAllCaps="false"
            />
        <EditText
            android:id="@+id/edngaysinh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="datetime"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gioitinh"
            android:textAllCaps="false"
            android:layout_weight="1"
            />
        <CheckBox
            android:id="@+id/cknam"
            android:text="@string/nam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            />
        <CheckBox
            android:id="@+id/cknu"
            android:text="@string/nu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            />


    </LinearLayout>
    <Button
        android:id="@+id/btnThem"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/them"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:background="#00BCD4"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/danhsachsinhvien"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerDanhsachsinhvien"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</android.widget.LinearLayout>